--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow" />
 <meta http-equiv="Content-Language" content="en" />
 <link rel="canonical" href="https://GeeLaw.github.io/bio-site/" />
-<title>J. Doe | Curriculum Vitae</title>
+<title>Yuchong Xie | Curriculum Vitae</title>
 <link href="assets/styles/gl-common.css" type="text/css" rel="stylesheet" />
 <link href="assets/styles/gl-common-day.css" type="text/css" rel="stylesheet" />
 <link href="assets/styles/gl-accessible.css" type="text/css" rel="stylesheet" />
@@ -15,32 +15,32 @@
 <link href="assets/external/katex.0.11.1/katex.css" type="text/css" rel="stylesheet" />
 <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
 <meta name="IE_RM_OFF" content="true" />
-<meta name="title" content="J. Doe | Curriculum Vitae" />
-<meta name="author" content="J. Doe" />
-<meta name="description" content="J. Doe&#8217;s curriculum vitae." />
+<meta name="title" content="Yuchong Xie | Curriculum Vitae" />
+<meta name="author" content="Yuchong Xie" />
+<meta name="description" content="Yuchong Xie&#8217;s curriculum vitae." />
 <meta name="created" content="2020-04-21" />
 <meta name="format-detection" content="telephone=no" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
-<meta name="application-name" content="J. Doe | Curriculum Vitae" />
-<meta name="msapplication-description" content="J. Doe&#8217;s curriculum vitae." />
+<meta name="application-name" content="Yuchong Xie | Curriculum Vitae" />
+<meta name="msapplication-description" content="Yuchong Xie&#8217;s curriculum vitae." />
 <meta name="msapplication-TileColor" content="#f2f2f2" />
 <meta name="msapplication-square70x70logo" content="https://GeeLaw.github.io/bio-site/assets/images/tiles/small.jpg" />
 <meta name="msapplication-square150x150logo" content="https://GeeLaw.github.io/bio-site/assets/images/tiles/medium.jpg" />
 <meta name="msapplication-wide310x150logo" content="https://GeeLaw.github.io/bio-site/assets/images/tiles/wide.jpg" />
 <meta name="msapplication-square310x310logo" content="https://GeeLaw.github.io/bio-site/assets/images/tiles/large.jpg" />
 <link href="apple-touch-icon.png" rel="apple-touch-icon" />
-<meta property="og:site_name" content="J. Doe | Curriculum Vitae" />
+<meta property="og:site_name" content="Yuchong Xie | Curriculum Vitae" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="J. Doe" />
+<meta property="og:title" content="Yuchong Xie" />
 <meta property="og:locale" content="en" />
 <meta property="og:url" content="https://GeeLaw.github.io/bio-site/" />
-<meta property="og:description" content="J. Doe&#8217;s curriculum vitae." />
+<meta property="og:description" content="Yuchong Xie&#8217;s curriculum vitae." />
 <meta property="article:published_time" content="2020-04-21" />
-<meta property="article:modified_time" content="2020-07-01" />
+<meta property="article:modified_time" content="2024-05-21" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="J. Doe" />
-<meta name="twitter:description" content="J. Doe&#8217;s curriculum vitae." />
+<meta name="twitter:title" content="Yuchong Xie" />
+<meta name="twitter:description" content="Yuchong Xie&#8217;s curriculum vitae." />
 <meta property="twitter:image" content="https://GeeLaw.github.io/bio-site/assets/images/hero-image.jpg" />
 <style type="text/css">
 .gl-eml { color: #555; }
@@ -51,14 +51,14 @@
 <div class="gl-body-wrapper gl-entry">
 <div class="gl-main" role="main">
 <div id="post-metadata">
-<h1>J.&nbsp;Doe</h1>
-<div class="gl-entry-metadata-box"><div class="dateline">As of 1 July 2020</div></div>
+<h1>Yuchong&nbsp;Xie</h1>
+<div class="gl-entry-metadata-box"><div class="dateline">As of 21 May 2024</div></div>
 </div>
 <article id="post-content" class="gl-suppress-deco">
-<figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of J. Doe" width="160" height="160" style="max-width: 160px;" /></figure>
-<p>I’m a second-year Ph.D. student in unknown discipline, advised by <a href="https://example.com/">unknown professor</a>. I am interested in some unknown specialized sub-area.</p>
-<p>Prior to joining <a href="https://example.com/">unknown current university</a>, I obtained my bachelor’s degree from <a href="https://example.com/">unknown previous university</a>.</p>
-<p>I can be reached at <span id="_eml" class="gl-eml">someone at example dot com</span>.</p>
+<figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
+<p>I’m an incoming Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad research interests, including systems security, software engineering, and related topics in AI and web3.</p>
+<p>Prior to joining <a href="https://hkust.edu.hk/">HKUST</a>, I obtained my bachelor and master’s degree from <a href="https://en.sjtu.edu.cn/">SJTU</a>.</p>
+<p>I can be reached at <span id="_eml" class="gl-eml">yu3h0xie at gmail dot com</span>.</p>
 <script type="application/javascript">
 window.setTimeout(function ()
 {
