--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <article id="post-content" class="gl-suppress-deco">
 <figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
 <p>I’m an incoming Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad research interests, including systems security, software engineering, and related topics in AI and web3.</p>
-<p>Prior to joining <a href="https://hkust.edu.hk/">HKUST</a>, I obtained my bachelor and master’s degree from <a href="https://en.sjtu.edu.cn/">SJTU</a>.</p>
+<p>Prior to joining <a href="https://hkust.edu.hk/">HKUST</a>, I obtained my bachelor and master’s degree from <a href="https://en.sjtu.edu.cn/">SJTU</a>. I spent seven wonderful years in Shanghai, playing american  football in <a href="https://weibo.com/p/1005052985465871/home">Lions</a> and CTF in <a href="https://ctftime.org/team/4419">0ops</a>.</p>
 <p>I can be reached at <span id="_eml" class="gl-eml">someone at example dot com</span>.</p>
 <script type="application/javascript">
 window.setTimeout(function ()
@@ -81,9 +81,30 @@ eml.removeAttribute('class');
 <div class="gl-bibtex-entry-authors">Yuwei Liu<span class="gl-bibtex-tex-large">*</span>, Siqi Chen<span class="gl-bibtex-tex-large">*</span>, <span class="gl-bibtex-tex-textbf">Yuchong Xie</span>, Yanhao Wang, Libo Chen, Bin Wang, Yingming Zeng, Zhi Xue, and Purui Su</div>
 <div class="gl-bibtex-entry-info"><span class="gl-bibtex-entry-venue">IEEE/ACM International Conference on Automated Software Engineering (ASE 2023)</span></div>
 </div>
-</div><h2>Experience</h2>
+</div><h2>Honors and Awards</h2>
+<ul>
+<li>2024.03 Outstanding Master Graduate Student of SJTU</li>
+<li>2023.12 Qiangwang Cup 2023, Third Place, 0ops</li>
+<li>2022.12 XCTF University Cybersecurity Special, Challenge First Place, 0ops</li>
+<li>2022.09 First-Class Cybersecurity Academy Scholarship</li>
+<li>2022.08 DEFCON CTF 2022, Second Place, Katzebin</li>
+<li>2022.08 Qiangwang Cup 2022, Champion, 0ops</li>
+<li>2021.12 ByteCTF, First Place, 0ops</li>
+<li>2021.08 Qiangwang International Elite Challenge On Cyber Mimic Defense, First Place, 0ops</li>
+</ul>
+<h2>Experience</h2>
+<ul>
+<li>Research Intern, Offside Labs, Web3 Security, 2024.01-2024.04</li>
+<li>Research Intern, Nio, RTOS Security and Fuzzing, 2022.06-2024.03</li>
+</ul>
 <h2>Academic Service</h2>
+<ul>
+<li>Sub-Reviewer of ISSTA &#39;24, FSE &#39;24.</li>
+</ul>
 <h2>Teaching Experience</h2>
+<ul>
+<li>Teaching Assistant, NIS8017: Security Vulnerability Assessment (Fall 2021, SJTU) </li>
+</ul>
 
 </article>
 </div>
