--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="robots" content="index, follow" />
 <meta http-equiv="Content-Language" content="en" />
-<link rel="canonical" href="https://GeeLaw.github.io/bio-site/" />
-<title>Yuchong Xie | Curriculum Vitae</title>
+<link rel="canonical" href="https://yu3h0.github.io/" />
+<title>Yuchong Xie | Homepage</title>
 <link href="assets/styles/gl-common.css" type="text/css" rel="stylesheet" />
 <link href="assets/styles/gl-common-day.css" type="text/css" rel="stylesheet" />
 <link href="assets/styles/gl-accessible.css" type="text/css" rel="stylesheet" />
@@ -15,33 +15,33 @@
 <link href="assets/external/katex.0.11.1/katex.css" type="text/css" rel="stylesheet" />
 <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
 <meta name="IE_RM_OFF" content="true" />
-<meta name="title" content="Yuchong Xie | Curriculum Vitae" />
+<meta name="title" content="Yuchong Xie | Homepage" />
 <meta name="author" content="Yuchong Xie" />
-<meta name="description" content="Yuchong Xie&#8217;s curriculum vitae." />
+<meta name="description" content="Yuchong Xie&#8217;s homepage." />
 <meta name="created" content="2020-04-21" />
 <meta name="format-detection" content="telephone=no" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
-<meta name="application-name" content="Yuchong Xie | Curriculum Vitae" />
-<meta name="msapplication-description" content="Yuchong Xie&#8217;s curriculum vitae." />
+<meta name="application-name" content="Yuchong Xie | Homepage" />
+<meta name="msapplication-description" content="Yuchong Xie&#8217;s homepage." />
 <meta name="msapplication-TileColor" content="#f2f2f2" />
-<meta name="msapplication-square70x70logo" content="https://GeeLaw.github.io/bio-site/assets/images/tiles/small.jpg" />
-<meta name="msapplication-square150x150logo" content="https://GeeLaw.github.io/bio-site/assets/images/tiles/medium.jpg" />
-<meta name="msapplication-wide310x150logo" content="https://GeeLaw.github.io/bio-site/assets/images/tiles/wide.jpg" />
-<meta name="msapplication-square310x310logo" content="https://GeeLaw.github.io/bio-site/assets/images/tiles/large.jpg" />
+<meta name="msapplication-square70x70logo" content="https://yu3h0.github.io/assets/images/tiles/small.jpg" />
+<meta name="msapplication-square150x150logo" content="https://yu3h0.github.io/assets/images/tiles/medium.jpg" />
+<meta name="msapplication-wide310x150logo" content="https://yu3h0.github.io/assets/images/tiles/wide.jpg" />
+<meta name="msapplication-square310x310logo" content="https://yu3h0.github.io/assets/images/tiles/large.jpg" />
 <link href="apple-touch-icon.png" rel="apple-touch-icon" />
-<meta property="og:site_name" content="Yuchong Xie | Curriculum Vitae" />
+<meta property="og:site_name" content="Yuchong Xie | Homepage" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Yuchong Xie" />
 <meta property="og:locale" content="en" />
-<meta property="og:url" content="https://GeeLaw.github.io/bio-site/" />
-<meta property="og:description" content="Yuchong Xie&#8217;s curriculum vitae." />
+<meta property="og:url" content="https://yu3h0.github.io/" />
+<meta property="og:description" content="Yuchong Xie&#8217;s homepage." />
 <meta property="article:published_time" content="2020-04-21" />
 <meta property="article:modified_time" content="2024-05-21" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Yuchong Xie" />
-<meta name="twitter:description" content="Yuchong Xie&#8217;s curriculum vitae." />
-<meta property="twitter:image" content="https://GeeLaw.github.io/bio-site/assets/images/hero-image.jpg" />
+<meta name="twitter:description" content="Yuchong Xie&#8217;s homepage." />
+<meta property="twitter:image" content="https://yu3h0.github.io/assets/images/hero-image.jpg" />
 <style type="text/css">
 .gl-eml { color: #555; }
 </style>
@@ -108,7 +108,7 @@ eml.removeAttribute('class');
 
 </article>
 </div>
-<footer class="gl-footer-far gl-print-forbidden"><p>Built with <a href="https://github.com/markedjs/marked" rel="nofollow">marked</a>, <a href="https://github.com/KaTeX/KaTeX" rel="nofollow">KaTeX</a>, <a href="https://github.com/GeeLaw/bibtex-ts">BibTeX-TS</a> and <a href="https://github.com/GeeLaw/bio-site">effort</a>.</p></footer>
+<footer class="gl-footer-far gl-print-forbidden"><p>Built with <a href="https://github.com/markedjs/marked" rel="nofollow">marked</a>, <a href="https://github.com/KaTeX/KaTeX" rel="nofollow">KaTeX</a>, <a href="https://github.com/GeeLaw/bibtex-ts">BibTeX-TS</a> and <a href="https://github.com/Yu3H0/Yu3H0.github.io">effort</a>.</p></footer>
 </div>
 <script type="text/javascript">window.GLFinishLoading();</script>
 </body>
