--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </div>
 <article id="post-content" class="gl-suppress-deco">
 <figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
-<p>I’m an incoming Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad research interests, including systems security, software engineering, and related topics in AI and web3.</p>
+<p>I&#39;m an incoming Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad research interests, including systems security, software engineering, and related topics in AI and web3.</p>
 <p>Prior to joining <a href="https://hkust.edu.hk/">HKUST</a>, I obtained my bachelor and master&#39;s degree from <a href="https://en.sjtu.edu.cn/">SJTU</a>. I spent seven wonderful years in Shanghai, playing american  football in <a href="https://weibo.com/p/1005052985465871/home">Lions</a> and CTF in <a href="https://ctftime.org/team/4419">0ops</a>.</p>
 <p>I can be reached at <span id="_eml" class="gl-eml">someone at example dot com</span>.</p>
 <script type="application/javascript">
