--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ eml.removeAttribute('class');
 <ul>
 <li>2024.03 Outstanding Master Graduate Student of SJTU</li>
 <li>2023.12 Qiangwang Cup 2023, Third Place, 0ops</li>
-<li>2022.12 XCTF University Cybersecurity Special, Challenge First Place, 0ops</li>
+<li>2022.12 XCTF University Cybersecurity Special Challenge, First Place, 0ops</li>
 <li>2022.09 First-Class Cybersecurity Academy Scholarship</li>
 <li>2022.08 DEFCON CTF 2022, Second Place, Katzebin</li>
 <li>2022.08 Qiangwang Cup 2022, Champion, 0ops</li>
