--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <meta property="og:url" content="https://yu3h0.github.io/" />
 <meta property="og:description" content="Yuchong Xie&#8217;s homepage." />
 <meta property="article:published_time" content="2020-04-21" />
-<meta property="article:modified_time" content="2024-05-21" />
+<meta property="article:modified_time" content="2024-06-11" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Yuchong Xie" />
 <meta name="twitter:description" content="Yuchong Xie&#8217;s homepage." />
@@ -52,7 +52,7 @@
 <div class="gl-main" role="main">
 <div id="post-metadata">
 <h1>Yuchong&nbsp;Xie</h1>
-<div class="gl-entry-metadata-box"><div class="dateline">As of 21 May 2024</div></div>
+<div class="gl-entry-metadata-box"><div class="dateline">As of 11 June 2024</div></div>
 </div>
 <article id="post-content" class="gl-suppress-deco">
 <figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
@@ -72,7 +72,7 @@ eml.removeAttribute('class');
 <h2>Publications</h2>
 <div class="gl-bibtex-bst-bio">
 <div class="gl-bibtex-entry" id="bibitem_FOX">
-<div class="gl-bibtex-entry-title"><span class="gl-bibtex-entry-bullet" aria-label="bullet symbol" role="img"><span aria-hidden="true">&#8226;</span> </span><a>FOX: Coverage-guided Fuzzing as Online Stochastic Control</a></div>
+<div class="gl-bibtex-entry-title"><span class="gl-bibtex-entry-bullet" aria-label="bullet symbol" role="img"><span aria-hidden="true">&#8226;</span> </span><a href="https://arxiv.org/abs/2406.04517" rel="nofollow">FOX: Coverage-guided Fuzzing as Online Stochastic Control</a></div>
 <div class="gl-bibtex-entry-authors">Dongdong She<span class="gl-bibtex-tex-large">*</span>, Adam Storek<span class="gl-bibtex-tex-large">*</span>, <span class="gl-bibtex-tex-textbf">Yuchong Xie</span>, Seoyoung Kweon, Prashast Srivastava, and Suman Jana</div>
 <div class="gl-bibtex-entry-info"><span class="gl-bibtex-entry-venue">ACM SIGSAC Conference on Computer and Communications Security (CCS 2024)</span></div>
 </div>
