--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <meta property="og:url" content="https://yu3h0.github.io/" />
 <meta property="og:description" content="Yuchong Xie&#8217;s homepage." />
 <meta property="article:published_time" content="2020-04-21" />
-<meta property="article:modified_time" content="2024-09-01" />
+<meta property="article:modified_time" content="2024-11-07" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Yuchong Xie" />
 <meta name="twitter:description" content="Yuchong Xie&#8217;s homepage." />
@@ -52,17 +52,17 @@
 <div class="gl-main" role="main">
 <div id="post-metadata">
 <h1>Yuchong&nbsp;Xie</h1>
-<div class="gl-entry-metadata-box"><div class="dateline">As of 1 September 2024</div></div>
+<div class="gl-entry-metadata-box"><div class="dateline">As of 7 November 2024</div></div>
 </div>
 <article id="post-content" class="gl-suppress-deco">
 <figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
-<p>I&#39;m a first year Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad research interests, including systems security, software engineering, and related topics in AI and web3.</p>
+<p>I&#39;m a first year Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad research interests in systems security (e.g., kernel, browser, and virtualization security), software engineering (e.g., software testing and program analysis), and emerging topics in AI and web3. Currently, my research focuses on leveraging AI techniques to address challenging problems in these domains.</p>
 <p>I obtained my bachelor and master&#39;s degree from <a href="https://en.sjtu.edu.cn/">SJTU</a>. I spent seven wonderful years in Shanghai, playing american  football in <a href="https://weibo.com/p/1005052985465871/home">Lions</a> and CTF in <a href="https://ctftime.org/team/4419">0ops</a>.</p>
 <p>I can be reached at <span id="_eml" class="gl-eml">someone at example dot com</span>.</p>
 <script type="application/javascript">
 window.setTimeout(function ()
 {
-var addr = [121, 117, 51, 104, 48, 120, 105, 101, 64, 103, 109, 97, 105, 108, 46, 99, 111, 109];
+var addr = [121, 120, 105, 101, 99, 101, 64, 99, 115, 101, 46, 117, 115, 116, 46, 104, 107];
 addr = String.fromCharCode.apply(String, addr);
 var eml = document.getElementById('_eml');
 eml.innerHTML = '<a href="mailto:' + addr + '">' + addr + '</a>';
