--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow" />
 <meta http-equiv="Content-Language" content="en" />
 <link rel="canonical" href="https://yu3h0.github.io/" />
-<title>Yuchong Xie | Homepage</title>
+<title>Yuchong Xie</title>
 <link href="assets/styles/gl-common.css" type="text/css" rel="stylesheet" />
 <link href="assets/styles/gl-common-day.css" type="text/css" rel="stylesheet" />
 <link href="assets/styles/gl-accessible.css" type="text/css" rel="stylesheet" />
@@ -15,14 +15,14 @@
 <link href="assets/external/katex.0.11.1/katex.css" type="text/css" rel="stylesheet" />
 <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
 <meta name="IE_RM_OFF" content="true" />
-<meta name="title" content="Yuchong Xie | Homepage" />
+<meta name="title" content="Yuchong Xie" />
 <meta name="author" content="Yuchong Xie" />
 <meta name="description" content="Yuchong Xie&#8217;s homepage." />
 <meta name="created" content="2020-04-21" />
 <meta name="format-detection" content="telephone=no" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
-<meta name="application-name" content="Yuchong Xie | Homepage" />
+<meta name="application-name" content="Yuchong Xie" />
 <meta name="msapplication-description" content="Yuchong Xie&#8217;s homepage." />
 <meta name="msapplication-TileColor" content="#f2f2f2" />
 <meta name="msapplication-square70x70logo" content="https://yu3h0.github.io/assets/images/tiles/small.jpg" />
@@ -30,14 +30,14 @@
 <meta name="msapplication-wide310x150logo" content="https://yu3h0.github.io/assets/images/tiles/wide.jpg" />
 <meta name="msapplication-square310x310logo" content="https://yu3h0.github.io/assets/images/tiles/large.jpg" />
 <link href="apple-touch-icon.png" rel="apple-touch-icon" />
-<meta property="og:site_name" content="Yuchong Xie | Homepage" />
+<meta property="og:site_name" content="Yuchong Xie" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Yuchong Xie" />
 <meta property="og:locale" content="en" />
 <meta property="og:url" content="https://yu3h0.github.io/" />
 <meta property="og:description" content="Yuchong Xie&#8217;s homepage." />
 <meta property="article:published_time" content="2020-04-21" />
-<meta property="article:modified_time" content="2024-11-07" />
+<meta property="article:modified_time" content="2024-11-12" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Yuchong Xie" />
 <meta name="twitter:description" content="Yuchong Xie&#8217;s homepage." />
@@ -52,7 +52,7 @@
 <div class="gl-main" role="main">
 <div id="post-metadata">
 <h1>Yuchong&nbsp;Xie</h1>
-<div class="gl-entry-metadata-box"><div class="dateline">As of 7 November 2024</div></div>
+<div class="gl-entry-metadata-box"><div class="dateline">As of 12 November 2024</div></div>
 </div>
 <article id="post-content" class="gl-suppress-deco">
 <figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
