--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <meta property="og:url" content="https://yu3h0.github.io/" />
 <meta property="og:description" content="Yuchong Xie&#8217;s homepage." />
 <meta property="article:published_time" content="2020-04-21" />
-<meta property="article:modified_time" content="2024-11-12" />
+<meta property="article:modified_time" content="2025-01-21" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Yuchong Xie" />
 <meta name="twitter:description" content="Yuchong Xie&#8217;s homepage." />
@@ -52,7 +52,7 @@
 <div class="gl-main" role="main">
 <div id="post-metadata">
 <h1>Yuchong&nbsp;Xie</h1>
-<div class="gl-entry-metadata-box"><div class="dateline">As of 12 November 2024</div></div>
+<div class="gl-entry-metadata-box"><div class="dateline">As of 21 January 2025</div></div>
 </div>
 <article id="post-content" class="gl-suppress-deco">
 <figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
@@ -118,7 +118,7 @@ eml2.removeAttribute('class');
 </ul>
 <h2>Academic Service</h2>
 <ul>
-<li>Sub-Reviewer of ISSTA &#39;24, FSE &#39;24.</li>
+<li>Sub-Reviewer of ISSTA &#39;24, FSE &#39;24, Oakland&#39;25.</li>
 </ul>
 <h2>Teaching Experience</h2>
 <ul>
