--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <meta property="og:url" content="https://yu3h0.github.io/" />
 <meta property="og:description" content="Yuchong Xie&#8217;s homepage." />
 <meta property="article:published_time" content="2020-04-21" />
-<meta property="article:modified_time" content="2025-04-10" />
+<meta property="article:modified_time" content="2025-06-23" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Yuchong Xie" />
 <meta name="twitter:description" content="Yuchong Xie&#8217;s homepage." />
@@ -52,7 +52,7 @@
 <div class="gl-main" role="main">
 <div id="post-metadata">
 <h1>Yuchong&nbsp;Xie</h1>
-<div class="gl-entry-metadata-box"><div class="dateline">As of 10 April 2025</div></div>
+<div class="gl-entry-metadata-box"><div class="dateline">As of 23 June 2025</div></div>
 </div>
 <article id="post-content" class="gl-suppress-deco">
 <figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
@@ -91,7 +91,7 @@ eml2.removeAttribute('class');
 <h2>Publications</h2>
 <div class="gl-bibtex-bst-bio">
 <div class="gl-bibtex-entry" id="bibitem_ZTaint">
-<div class="gl-bibtex-entry-title"><span class="gl-bibtex-entry-bullet" aria-label="bullet symbol" role="img"><span aria-hidden="true">&#8226;</span> </span><a>ZTaint-Havoc: From Havoc Mode to Zero-Execution Fuzzing-Driven Taint Inference</a></div>
+<div class="gl-bibtex-entry-title"><span class="gl-bibtex-entry-bullet" aria-label="bullet symbol" role="img"><span aria-hidden="true">&#8226;</span> </span><a href="https://arxiv.org/abs/2506.08838" rel="nofollow">ZTaint-Havoc: From Havoc Mode to Zero-Execution Fuzzing-Driven Taint Inference</a></div>
 <div class="gl-bibtex-entry-authors"><span class="gl-bibtex-tex-textbf">Yuchong Xie</span>, Wenhui Zhang, and Dongdong She</div>
 <div class="gl-bibtex-entry-info"><span class="gl-bibtex-entry-venue">ACM SIGSOFT International Symposium on Software Testing and Analysis (ISSTA 2025)</span></div>
 </div>
