--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <meta property="og:url" content="https://yu3h0.github.io/" />
 <meta property="og:description" content="Yuchong Xie&#8217;s homepage." />
 <meta property="article:published_time" content="2020-04-21" />
-<meta property="article:modified_time" content="2025-06-23" />
+<meta property="article:modified_time" content="2025-09-18" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Yuchong Xie" />
 <meta name="twitter:description" content="Yuchong Xie&#8217;s homepage." />
@@ -52,11 +52,11 @@
 <div class="gl-main" role="main">
 <div id="post-metadata">
 <h1>Yuchong&nbsp;Xie</h1>
-<div class="gl-entry-metadata-box"><div class="dateline">As of 23 June 2025</div></div>
+<div class="gl-entry-metadata-box"><div class="dateline">As of 18 September 2025</div></div>
 </div>
 <article id="post-content" class="gl-suppress-deco">
-<figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="160" height="160" style="max-width: 160px;" /></figure>
-<p>I&#39;m a first year Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad research interests in systems security (e.g., kernel, browser, and virtualization security), software engineering (e.g., software testing and program analysis), and emerging topics in AI and web3. Currently, my research focuses on leveraging AI techniques to address challenging problems in these domains.</p>
+<figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="300" height="200" style="max-width: 300px;" /></figure>
+<p>I&#39;m a second year Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad research interests in systems security (e.g., kernel, browser, and virtualization security), software engineering (e.g., software testing and program analysis), and emerging topics in AI and web3. Currently, my research focuses on leveraging AI techniques to address challenging problems in these domains.</p>
 <p>I obtained my bachelor and master&#39;s degree from <a href="https://en.sjtu.edu.cn/">SJTU</a>. I spent seven wonderful years in Shanghai, playing american  football in <a href="https://weibo.com/p/1005052985465871/home">Lions</a> and CTF in <a href="https://ctftime.org/team/4419">0ops</a>.</p>
 <p> Please feel free to reach out via email at <span id="_eml" class="gl-eml">someone at example dot com</span> or <span id="_eml2" class="gl-eml">someone at example dot com</span> :)</p>
 <script type="application/javascript">
@@ -125,7 +125,7 @@ eml2.removeAttribute('class');
 </ul>
 <h2>Academic Service</h2>
 <ul>
-<li>Sub-Reviewer of ISSTA &#39;24, FSE &#39;24, Oakland&#39;25.</li>
+<li>Sub-Reviewer of ISSTA&#39;24, FSE&#39;24, Oakland&#39;25, ASE&#39;25</li>
 </ul>
 <h2>Teaching Experience</h2>
 <ul>
