--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <meta property="og:url" content="https://yu3h0.github.io/" />
 <meta property="og:description" content="Yuchong Xie&#8217;s homepage." />
 <meta property="article:published_time" content="2020-04-21" />
-<meta property="article:modified_time" content="2025-09-21" />
+<meta property="article:modified_time" content="2026-01-03" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Yuchong Xie" />
 <meta name="twitter:description" content="Yuchong Xie&#8217;s homepage." />
@@ -52,11 +52,17 @@
 <div class="gl-main" role="main">
 <div id="post-metadata">
 <h1>Yuchong&nbsp;Xie</h1>
-<div class="gl-entry-metadata-box"><div class="dateline">As of 21 September 2025</div></div>
+<div class="gl-entry-metadata-box"><div class="dateline">As of 3 January 2026</div></div>
 </div>
 <article id="post-content" class="gl-suppress-deco">
 <figure class="gl-page-background gl-float-right gl-image-box" style="text-align: center;"><img src="assets/images/hero-image.jpg" alt="A photo of Yuchong Xie" width="300" height="200" style="max-width: 300px;" /></figure>
-<p>I&#39;m a second year Ph.D. student at Department of Computer Science and Engineering, Hong Kong University of Science and Technology (HKUST), under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. I have broad interests in systems and software security. My current work focuses on leveraging AI to enhance traditional security techniques (e.g., fuzzing and static program analysis) and applying them to practical contexts such as IoT and OS. I am also interested in the security of LLM-based agentic systems.</p>
+<p>I&#39;m a second year Ph.D. student at CSE HKUST, under the supervision of <a href="https://cse.hkust.edu.hk/~dongdong/">Prof. Dongdong She</a> and <a href="https://www.cse.ust.hk/~shuaiw/">Prof. Shuai Wang</a>. </p>
+<p>I have broad interests in systems and software security. My research lies at the intersection of <strong>Large Language Models (LLMs)</strong> and <strong>Security</strong>. specifically:</p>
+<ul>
+<li><strong>LLM for Security:</strong> Leveraging LLMs to solve traditional security tasks.</li>
+<li><strong>Security of LLM Systems:</strong> Investigating the security risks of LLM-powered agents and the security of LLM training systems.</li>
+</ul>
+<p>During my research, I developed a strong interest in LLMs. Driven by this passion, I am currently an intern at the RL team @ Moonshot AI.</p>
 <p>I obtained my bachelor and master&#39;s degree from <a href="https://en.sjtu.edu.cn/">SJTU</a>. I spent seven wonderful years in Shanghai, playing american  football in <a href="https://weibo.com/p/1005052985465871/home">Lions</a> and CTF in <a href="https://ctftime.org/team/4419">0ops</a>.</p>
 <p> Please feel free to reach out via email at <span id="_eml" class="gl-eml">someone at example dot com</span> or <span id="_eml2" class="gl-eml">someone at example dot com</span> :)</p>
 <script type="application/javascript">
